# iTrainer

./: .gitignore  README.md  angles.py  data.db  drive_shot.csv  extract_key_points.py  final.csv  final1.csv  main.py  manipulate.py  pyproject.toml  rename.py  requirements.txt  shots_data.csv  shots_model.pickle  test.py  train_csv.py  train_images.py  train_npy.py  train_test.py
.streamlit--/: config.toml
output/drive/: 1.npy  10.npy  10drive.npy  11.npy  11drive.npy  12.npy  13.npy  13drive.npy  14drive.npy  15.npy  19drive.npy  1drive.npy  2.npy  20.npy  20drive.npy  23drive.npy  24drive.npy  25.npy  26drive.npy  27drive.npy  28.npy  2drive.npy  3.npy  30drive.npy  31drive.npy  33.npy  33drive.npy  35.npy  36.npy  36drive.npy  37.npy  37drive.npy  38.npy  39.npy  39drive.npy  3drive.npy  4.npy  40.npy  40drive.npy  41drive.npy  (+38 more)
output/offspin/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  25.npy  28.npy  29.npy  3.npy  30.npy  31.npy  32.npy  33.npy  34.npy  35.npy  39.npy  4.npy  40.npy  41.npy  42.npy  43.npy  44.npy  45.npy  46.npy  47.npy  48.npy  49.npy  5.npy  50.npy  (+13 more)
output/pullshot/: 10.npy  16.npy  2.npy  22.npy  24.npy  25.npy  27.npy  29.npy  3.npy  30.npy  31.npy  35.npy  36.npy  37.npy  39.npy  40.npy  42.npy  47.npy  48.npy  52.npy  56.npy  58.npy  62.npy  63.npy  64.npy  65.npy  66.npy  67.npy  68.npy  8.npy  9.npy
output/sweep/: 1.npy  11.npy  15.npy  16.npy  18.npy  22.npy  23.npy  24.npy  28.npy  29.npy  3.npy  30.npy  32.npy  34.npy  35.npy  (+21 more)
style/: style.css
(+273 files in other folders)
