[tool.poetry]
name = "itrainer"
version = "0.1.0"
description = "Personal Performance Analyzer for Cricket"
authors = ["Chameen Sandeepa <chameensandeepa9@gmail.com>"]
license = "Free"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
streamlit = "1.20.0"
mediapipe = "0.9.1.0"
numpy = "1.24.2"
opencv-contrib-python = "4.7.0.72"
pandas = "1.5.3"
Pillow = "9.5.0"
requests = "2.28.2"
scikit-learn = "1.2.2"
streamlit-lottie = "0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
